--- a/sol-connector/package.json
+++ b/sol-connector/package.json
@@ -15,6 +15,10 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@solana/wallet-adapter-react": "^0.15.37",
+    "@solana/wallet-adapter-react-ui": "^0.9.37",
+    "@solana/wallet-adapter-wallets": "^0.19.35",
+    "@solana/web3.js": "^1.98.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
