--- a/sol-connector/package.json
+++ b/sol-connector/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
+    "@fontsource/space-mono": "^5.2.5",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@solana/wallet-adapter-react": "^0.15.37",
